# python-cloudflare-cli4

./: .coveragerc  .gitignore  .mypy.ini  .pypirc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  HOW-TO-PACKAGE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TABLE-OF-COMMANDS.md  brew-formula-cloudflare-cli4.rb  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codespell_and_ruff.yml
CloudFlare/: .api_v4.py.swp  __init__.py  api_decode_from_openapi.py  api_decode_from_web.py  api_extras.py  api_v4.py  cloudflare.py  exceptions.py  logger.py  logging_helper.py  network.py  read_configs.py  utils.py
CloudFlare/tests/: __init__.py  test_add.py  test_api_dump.py  test_certificates.py  test_cloudflare.py  test_cloudflare_calls.py  test_dns_import_export.py  test_dns_records.py  test_find.py  test_graphql.py  test_images_v2_direct_upload.py  test_ips.py  test_issue114.py  test_loa_documents.py  test_load_balancers.py  test_log_received.py  test_paging_thru_zones.py  test_purge_cache.py  test_radar_returning_csv.py  test_rulesets.py  test_urlscanner.py  test_waiting_room.py  test_workers.py  utils.py
cli4/: __main__.py  cli4.1  cli4.man  cli4.py  converters.py  dump.py  examples.py  myjsonlines.py  myyaml.py
docs/: Makefile  conf.py  index.rst  modules.rst
examples/: example_account_rules_lists_items.py  example_ai_images.py  example_ai_speechrecognition.py  example_ai_translate.py  example_always_use_https.py  example_are_zones_ipv6.py  example_are_zones_ipv6_simple.py  example_bot_management.py  example_certificates.py  example_create_zone_and_populate.py  example_custom_hostnames.py  example_delete_zone_entry.py  example_dns_export.py  example_dns_import.py  example_dnssec_settings.py  example_firewall_rules.py  example_graphql.py  example_images_v2_direct_upload.py  example_ips.py  example_list_api_from_web.py  example_page_rules.py  example_paging_thru_zones.py  example_paging_thru_zones.sh  example_proxied.py  example_settings.py  example_show_zones_email.py  example_time_calls.py  example_update_dynamic_dns.py  example_user.py  example_user_tokens.py  example_with_usage.py  example_zone_purge_cache.py  example_zone_search.sh  example_zones.py
tests/: build-matrix.sh  create-readme-rst.py  test1.py  test_add.py  test_api_dump.py  test_certificates.py  test_cloudflare.py  test_cloudflare_calls.py  test_dns_import_export.py  test_dns_records.py  test_ips.py  test_issue114.py  test_radar_returning_csv.py
unused/: build-matrix.sh  compare-api_v4.sh  create-readme-rst.py
