[project]
name = "cloudflare-cli4"
version = "2.19.4-3"
readme = "README.md"
description = "Command line tool to interact with Cloudflare API v4"
authors = [
    { name = "Stainless Inc.", email = "support@stainlessapi.com" },
    { name = "Martin J. Levy", email = "mahtin@mahtin.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

requires-python = ">3.6.0"
license = { text = "MIT" }

keywords = ["cloudflare", "API", "wrapper"]
dependencies = ["requests", "pyyaml", "jsonlines"]

[project.urls]
documentation = "https://github.com/cloudflare/python-cloudflare-cli4"
source-code = "https://github.com/cloudflare/python-cloudflare-cli4"

[project.scripts]
cli4 = "cli4.__main__:main"

[project.data-files]
"share/man/man1" = ["cli4/cli4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip",
    "pytz",
    "setuptools",
    "pytest",
    "pytest-cov",
    "pylint",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cli4", "CloudFlare"]
